# zhplot

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: build_docs.yaml  python-publish.yml  test.yaml
changelog/: index.html
search/: search_index.json
tests/: test_matplotlib.py  test_wordcloud.py
zhplot/: __init__.py  matplotlib.py  wordcloud.py
